--- a/src/components/styles/Hero.css
+++ b/src/components/styles/Hero.css
@@ -1,6 +1,13 @@
 .hero-container{
     color: black;
     padding-top: 8rem;
+    height: 652px;
+    padding-bottom: 11rem;
+    background-image: url("../images/background/1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+
 }
 
 .hero-content{
@@ -14,14 +21,15 @@
     display: flex;
     flex-direction: column;
     font-size: 50px;
-    color: rgb(182, 9, 9);
+    color: #66101F;
     margin-bottom: 3rem;
 }
 
 .hero-content-title span{
-    color: rgba(182, 9, 9, 0.678);
+    color: #66101ebd;
 }
 
 .hero-content-description{
+    color: #19535F;
     font-size: 20px;
 }
